compiler/tests/fail/register_allocation/x86-64/bug_426_bis.jazz
fn foo(reg u64 x y) -> reg u64 {
    return x;
}

export
fn dummy(reg u64 p) -> reg u64 {
  p = p;
  p = foo(p, p);
  return p;
}
